# Conduct_Backend

./: .coverage  .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  dockerfile  main.py  pyproject.toml  pytest.ini
app/: celery_worker.py  messages.py  models.py  schema.py  utils.py
app/api/v1/: api.py
app/api/v1/endpoints/: forum.py  password.py  skills.py  users.py
app/core/: celery_worker.py  db.py  init_db.py  security.py  settings.py
app/curd/: curd_password.py  curd_skills.py  curd_user.py  forum.py  password.py  skills.py  user.py
app/email_templates/: new_account_template.html
app/migration/: env.py
app/migration/versions/: 2024_04_03_2320-d0be27986867_first_db.py  3f812080fc4d_uuid7_and_optionl_changed.py  7b802d9dceb8_table_init.py
app/models/: BaseUUID.py  __init__.py  forum.py  skills.py  users.py  userskills.py
app/modules/: __init__.py  forgot_password_template.html  messages.py  models.py  schema.py  utils.py
scripts/: run.sh
tests/: README.md  conftest.py  test_users.py
tests/endpoints/: test_skills_endpoint.py  test_users.py  test_users_endpoint.py  test_zlogout_endpoint.py
tests/tester/: test_endpoints.py
tests/utils/: utils.py
