[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["naveen-ravi2810 <rnaveen28102003@gmial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.16"
bcrypt = "^4.1.2"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
pyjwt = "^2.8.0"
pytz = "^2024.1"
redis = "^5.0.3"
ruff = "^0.3.3"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
pytest = "^8.1.1"
httpx = "^0.27.0"
celery = "^5.3.6"
flower = "^2.0.1"
asyncpg = "^0.29.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
uuid7 = "^0.1.0"
fastapi-pagination = "^0.12.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
